syntax="proto2";

package jraft;

import "enum.proto";

option java_package="com.alipay.sofa.jraft.entity.codec.v2";
option java_outer_classname = "LogOutter";

message PBLogEntry {
    required EntryType type = 1;
    required int64 term = 2;
    required int64 index = 3;
    repeated bytes peers = 4;
    repeated bytes old_peers = 5;
    required bytes data = 6;
    optional int64 checksum = 7;
    repeated bytes learners = 8;
    repeated bytes old_learners = 9;
    map<string, string> learner_with_source = 10;
    map<string, string> old_learner_with_source = 11;
};
